--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "scan-project",
+  "homepage": "https://emiliiajohnson.github.io/SCAN",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
     "html-entities": "^2.4.0",
     "latest-version": "^7.0.0",
     "mobx": "^6.9.0",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
